--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -63,7 +63,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = driver://user:pass@localhost/dbname
+sqlalchemy.url = postgresql+psycopg2://neondb_owner:npg_ibA02UrhfwEs@ep-gentle-morning-a7rpno72-pooler.ap-southeast-2.aws.neon.tech/neondb?sslmode=require
 
 
 [post_write_hooks]
